--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "accountGroupToken": "twqg6931xngganfto6zh2qyo7n83o3bz",
     "NTP": "time.google.com",
-    "cert": 1,
-    "proxy_url": "demo_proxy.net",
-    "proxy_port": 8087,
+    "cert": 0,
+    "proxy_url": "thd-svr-proxy.com",
+    "proxy_port": 9090,
     "defaultPassword": "welcome"
 }
